@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXDefault.h,v 1.2.2.2 2005/03/25 04:34:16 wolfsuit Exp $
+ * RCS: @(#) $Id: tkMacOSXDefault.h,v 1.2.2.3 2005/06/23 20:15:22 das Exp $
  */
 
 #ifndef _TKMACDEFAULT
@@ -139,19 +139,19 @@
  */
  
 /* 
- * I test the following two values in TkpDrawEntryBorderAndFocus
+ * I test the following three values in TkpDrawEntryBorderAndFocus
  * to determine whether to use the native entry widget.  So if 
  * you change the defaults to be different from these, then you
  * won't get the native widget by default.
  */
  
 #define MAC_OSX_FOCUS_WIDTH 3
-#define MAC_OSX_ENTRY_BORDER 5
+#define MAC_OSX_ENTRY_BORDER 2
 #define MAC_OSX_ENTRY_RELEIF TK_RELIEF_SUNKEN
 
 #define DEF_ENTRY_BG_COLOR		NORMAL_BG
 #define DEF_ENTRY_BG_MONO		WHITE
-#define DEF_ENTRY_BORDER_WIDTH		"5"
+#define DEF_ENTRY_BORDER_WIDTH		"2"
 #define DEF_ENTRY_CURSOR		"xterm"
 #define DEF_ENTRY_DISABLED_BG_COLOR	NORMAL_BG
 #define DEF_ENTRY_DISABLED_BG_MONO	WHITE
